fix: increase step 4 list spacing

--- a/assets/src/js/admin/onboarding-wizard/app/steps/donation-form/style.scss
+++ b/assets/src/js/admin/onboarding-wizard/app/steps/donation-form/style.scss
@@ -51,14 +51,14 @@
 
 	ul {
 		padding: 0;
-		margin: 0 0 36px 0;
+		margin: 12px 0 36px 0;
 		list-style: none;
 
 		> li {
 			font-family: Montserrat, Arial, Helvetica, sans-serif;
 			font-weight: 500;
-			font-size: 14px;
-			line-height: 20px;
+			font-size: 16px;
+			line-height: 24px;
 			color: #333;
 
 			padding: 0;
